--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,14 +10,14 @@
     <meta name="theme-color" content="#157878">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-    <!--{% include head-custom.html %}-->
+    {% include head-custom.html %}
   </head>
   <body>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
-      <h2 class="project-tagline"><span style="color: red; font-weight: bold">C</span>onditional <span style="color: red; font-weight: bold">V</span>ariational <span style="color: red; font-weight: bold">A</span>uto<span style="color: red; font-weight: bold">E</span>ncoder - <span style="color: red; font-weight: bold">G</span>raph <span style="color: red; font-weight: bold">L</span>aplacian <span style="color: red; font-weight: bold">R</span>egularized <span style="color: red; font-weight: bold">M</span>odel</h2>
+      <h2 class="project-tagline"><span style="font-weight: bold">C</span>onditional <span style="font-weight: bold">V</span>ariational <span style="font-weight: bold">A</span>uto<span style="font-weight: bold">E</span>ncoder - <span style="font-weight: bold">G</span>raph <span style="font-weight: bold">L</span>aplacian <span style="font-weight: bold">R</span>egularized <span style="font-weight: bold">M</span>odel</h2>
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
