--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,9 @@
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
     <meta charset="UTF-8">
-
+    <!-- overwrite title tag shown in the browser's title bar, default it's "title | description" -->
+    <title> CVAE-GLRM </title>
+    
 {% seo %}
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preload" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" as="style" type="text/css" crossorigin>
