Change package name

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <!-- overwrite title tag shown in the browser's title bar, default it's "title | description" -->
-    <title> CVAE-GLRM </title>
+    <title> SDePER </title>
     
 {% seo %}
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -19,13 +19,13 @@
 
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
-      <h2 class="project-tagline"><span style="font-weight: bold">C</span>onditional <span style="font-weight: bold">V</span>ariational <span style="font-weight: bold">A</span>uto<span style="font-weight: bold">E</span>ncoder - <span style="font-weight: bold">G</span>raph <span style="font-weight: bold">L</span>aplacian <span style="font-weight: bold">R</span>egularized <span style="font-weight: bold">M</span>odel</h2>
+      <h2 class="project-tagline"><span style="font-weight: bold">S</span>patial <span style="font-weight: bold">De</span>convolution method with <span style="font-weight: bold">P</span>latform <span style="font-weight: bold">E</span>ffect <span style="font-weight: bold">R</span>emoval</h2>
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
       {% if site.show_downloads %}
-        <a href="https://cvae-glrm.readthedocs.io/en/latest/" class="btn">Documentation</a>
-        <a href="https://github.com/az7jh2/CVAE-GLRM_Analysis" class="btn">Analysis Repo</a>
+        <a href="https://sdeper.readthedocs.io/en/latest/" class="btn">Documentation</a>
+        <a href="https://github.com/az7jh2/SDePER_Analysis" class="btn">Analysis Repo</a>
       {% endif %}
     </header>
 
